# everything

./: README.md
cmake/001_avoid_custom_command_rerun/: CMakeLists.txt  README.md  main.f90.in  modify_hello_world.py
cmake/002_pass_compiler_flags/: CMakeLists.txt  README.md  main.f90
cmake/002_pass_compiler_flags/lib/: CMakeLists.txt  mylib.f90
debug/: remote-gdb.md
ubuntu/: change-apt-sources-to-old-releases.sh
windows/: autologin.ps1  install_choco_and_vim.ps1  install_new_powershell.ps1  user_autologin.ps1  user_signin_after_sleep_off.ps1
